# live_strategy_backtester

./: CMakeLists.txt  README.md
include/: analytics_ml.hpp  backtest_engine.hpp  data_manager.hpp  live_engine.hpp  market_microstructure.hpp  order_matching.hpp  performance_analytics.hpp  risk_manager.hpp  strategy_framework.hpp  types.hpp
src/: analytics_ml.cpp  backtest_engine.cpp  data_manager.cpp  live_engine.cpp  main.cpp  market_microstructure.cpp  order_matching.cpp  performance_analytics.cpp  risk_manager.cpp  strategy_framework.cpp
tests/: test_backtest_engine.cpp
